--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -3,13 +3,13 @@ html
     meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
     meta(name='viewport', content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     meta(name='keywords', content='Arts Travel, Global Arts, Travel Agency, Contemporary Art Tours')
-    meta(name='og:url', content="http://www.global_art-travel.art/")
+    meta(name='og:url', content="http://global-contemporaryart-tours.art")
     meta(name='og:type', content="agency")
-    meta(name='og:title', content=typeof(title) !== 'Global Contemporary Art Tours Group, Inc' ? title : "Global Contemporary Art Tours Group, Inc")
+    meta(name='og:title', content=typeof(title) !== 'Global Contemporary Art Tours Group, LTD' ? title : "Global Contemporary Art Tours Group, LTD")
     meta(name='og:image', content="")
-    meta(name='og:description', content="Your Flight Is Cancelled is a new e-flux project conceived by Julieta Aranda and Anton Vidokle.")
+    meta(name='og:description', content="Your Flight Is Cancelled is a new e-flux project conceived by Julieta Aranda and Anton Vidokle. Part a bankrupt travel agency, part literally fiction, this itinerant installation and website speculate about a near future in which international movement of people, art and ideas grind to a halt. Beginning with a window display at NICC Brussels this fall, Your Flight Is Cancelled will appear in installments of short prose, images and video by a group of contributors including Brian Kuan Wood, Kaye Cain-Nielsen, Benjamin Bratton, Bruna Mori, Jörg Heiser, Chus Martínez, Ingo Niermann, and others.")
 
-    link(rel='shortcut icon', href='./images/Symbols/Place selection.png', type='image/x-icon') 
+    link(rel='shortcut icon', href='./icons/GlowG500.png', type='image/x-icon') 
     link(rel='stylesheet', href='./styles/main.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     title Global Art Tours
