share link title

--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -12,7 +12,7 @@ html
     link(rel='shortcut icon', href='./icons/GlowG500.png', type='image/x-icon') 
     link(rel='stylesheet', href='./styles/main.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-    title Global Art Tours
+    title Global Contemporary Art Tours Group, LTD
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js')
   
   body
