--- a/public/assets/styles/widgets.css
+++ b/public/assets/styles/widgets.css
@@ -59,3 +59,11 @@ input[type=submit]{
 .chunk label{
   margin-left: 7px;
 }
+
+#virtualAirport{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0; 
+  position: absolute;
+}
