--- a/public/views/partials/nav.pug
+++ b/public/views/partials/nav.pug
@@ -7,17 +7,17 @@ nav.desktop
     div.tab-container
       a.tablink.menu-item#destinations-tab(href="#destinations" data-value="destinations") Destinations
     div.tab-container
-      a.tablink.menu-item#vacations-tab(href="#vacations" data-value="vacations") Vacation Packages  
+      a.menu-item#vacations-tab Vacation Packages  
     div.tab-container
       a.tablink.menu-item#offers-tab(href="#offers" data-value="offers") Deals & Offers
     div.tab-container
       a.tablink.menu-item#services-tab(href="#services" data-value="services") Extra Services 
     div.tab-container
-      a.tablink.menu-item#partners-tab(href="#partners" data-value="partners") Partners
+      a.menu-item#partners-tab Partners
     div.tab-container
       a.tablink.menu-item#privacy-tab(href="#privacy" data-value="privacy") Terms of Privacy
     div.tab-container
-      a.tablink.menu-item#faq-tab(href="#faq" data-value="faq") Passport FAQ
+      a.menu-item#faq-tab Passport FAQ
     div.tab-container
         a.tablink.menu-item#about-tab(href="#about" data-value="about") About Us
 nav.mobile
