--- a/public/views/subPages/privacy.pug
+++ b/public/views/subPages/privacy.pug
@@ -1,8 +1,5 @@
 div.tabcontent#privacy-page
-  .main-text.column
-    .title.mobile
-      marquee
-        //- each url in imageUrls
-          img(src=url)
+  iframe#radar(src="" width="70%" height="70%" autoplay)
+
 script.
   //- var imageUrls = !{JSON.stringify(GCATGImages)}
