--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -103,7 +103,7 @@ a:hover{
   background: #fff;
 }
 .round{
-  margin: 5em;
+  margin: 10em 5em;
   width: 10em;
   height: 10em;
   border-radius: 5em;
@@ -214,7 +214,7 @@ footer marquee{
 }
 
 #waveform{
-  margin: 3em 0;
+  margin: 5em 0;
   width: 100%;
 }
 
@@ -299,7 +299,7 @@ div.frame:nth-of-type(2){
 #conference-carousel{
   height: 80px;
   position: absolute;
-  right: 10em;
+  margin: 5em;
 }
 
 #conference-carousel img{
