--- a/public/views/partials/footer.pug
+++ b/public/views/partials/footer.pug
@@ -1,2 +1,18 @@
 footer
-  marquee Flight Deals:  Barcelona - Save up to 10%    /    Basel - Save up to 15%    /    Miami - Save up to 5%    /    Munich - Save up to 3%    /    Festival Pass Deals:  Ljubljana Triennial - Save up to 15%    /    Dakar Biennial - Save up to 15%    /    Basel - Save up to 15%
+  marquee 
+    | Flight Deals:  Barcelona - Save up to 10%
+    span /
+    | Basel - Save up to 15% 
+    span /
+    | Miami - Save up to 5%
+    span /
+    | Munich - Save up to 3%
+    span /
+    | Festival Pass Deals:  Ljubljana Triennial - Save up to 15%
+    span /
+    | Dakar Biennial - Save up to 15%
+    span /
+    | Basel - Save up to 15% 
+    span /
+    span.last 
+      a(href="https://theholding.page") built by hold
