--- a/public/assets/styles/typography.css
+++ b/public/assets/styles/typography.css
@@ -1,188 +1,206 @@
 /* -----------  */
 @font-face {
-  font-family: 'AcuminPro-Regular';
-      src:  url('../fonts/AcuminPro-Regular/AcuminPro-Regular.eot');
-     src:  url('../fonts/AcuminPro-Regular/AcuminPro-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/AcuminPro-Regular/AcuminPro-Regular.woff') format('woff'),
-        url('../fonts/AcuminPro-Regular/AcuminPro-Regular.ttf')  format('truetype'),
-        url('../fonts/AcuminPro-Regular/AcuminPro-Regular.svg#AcuminPro-Regular') format('svg');
+  font-family: "AcuminPro-Regular";
+  src: url("../fonts/AcuminPro-Regular/AcuminPro-Regular.eot");
+  src: url("../fonts/AcuminPro-Regular/AcuminPro-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/AcuminPro-Regular/AcuminPro-Regular.woff") format("woff"),
+    url("../fonts/AcuminPro-Regular/AcuminPro-Regular.ttf") format("truetype"),
+    url("../fonts/AcuminPro-Regular/AcuminPro-Regular.svg#AcuminPro-Regular")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'AcuminPro-Bold';
-      src:  url('../fonts/AcuminPro-Bold/AcuminPro-Bold.eot');
-     src:  url('../fonts/AcuminPro-Bold/AcuminPro-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/AcuminPro-Bold/AcuminPro-Bold.woff') format('woff'),
-        url('../fonts/AcuminPro-Bold/AcuminPro-Bold.ttf')  format('truetype'),
-        url('../fonts/AcuminPro-Bold/AcuminPro-Bold.svg#AcuminPro-Bold') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'AcuminPro-ExtraLight';
-      src:  url('../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.eot');
-     src:  url('../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.woff') format('woff'),
-        url('../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.ttf')  format('truetype'),
-        url('../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.svg#AcuminPro-ExtraLight') format('svg');
+  font-family: "AcuminPro-Bold";
+  src: url("../fonts/AcuminPro-Bold/AcuminPro-Bold.eot");
+  src: url("../fonts/AcuminPro-Bold/AcuminPro-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/AcuminPro-Bold/AcuminPro-Bold.woff") format("woff"),
+    url("../fonts/AcuminPro-Bold/AcuminPro-Bold.ttf") format("truetype"),
+    url("../fonts/AcuminPro-Bold/AcuminPro-Bold.svg#AcuminPro-Bold")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'AcuminPro-BoldItalic';
-      src:  url('../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.eot');
-     src:  url('../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.woff') format('woff'),
-        url('../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.ttf')  format('truetype'),
-        url('../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.svg#AcuminPro-BoldItalic') format('svg');
+  font-family: "AcuminPro-ExtraLight";
+  src: url("../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.eot");
+  src: url("../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.woff")
+      format("woff"),
+    url("../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.ttf")
+      format("truetype"),
+    url("../fonts/AcuminPro-ExtraLight/AcuminPro-ExtraLight.svg#AcuminPro-ExtraLight")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'TradeGothicLTStd-Extended';
-      src:  url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.eot');
-     src:  url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.woff') format('woff'),
-        url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.ttf')  format('truetype'),
-        url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.svg#TradeGothicLTStd-Extended') format('svg');
+  font-family: "AcuminPro-BoldItalic";
+  src: url("../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.eot");
+  src: url("../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.woff")
+      format("woff"),
+    url("../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.ttf")
+      format("truetype"),
+    url("../fonts/AcuminPro-BoldItalic/AcuminPro-BoldItalic.svg#AcuminPro-BoldItalic")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
-
 
 @font-face {
-  font-family: 'TradeGothicLTStd-BoldExt';
-      src:  url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.eot');
-     src:  url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.woff') format('woff'),
-        url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.ttf')  format('truetype'),
-        url('../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.svg#TradeGothicLTStd-BoldExt') format('svg');
+  font-family: "TradeGothicLTStd-Extended";
+  src: url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.eot");
+  src: url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.woff")
+      format("woff"),
+    url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.ttf")
+      format("truetype"),
+    url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-Extended/TradeGothicLTStd-Extended.svg#TradeGothicLTStd-Extended")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
+@font-face {
+  font-family: "TradeGothicLTStd-BoldExt";
+  src: url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.eot");
+  src: url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.woff")
+      format("woff"),
+    url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.ttf")
+      format("truetype"),
+    url("../fonts/TradeGothicLTExtended/TradeGothicLTStd-BoldExt/TradeGothicLTStd-BoldExt.svg#TradeGothicLTStd-BoldExt")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-.logo{
-  font-family: 'Serpentine-MediumOblique';
+.logo {
+  font-family: "Serpentine-MediumOblique";
   font-size: 36px;
   line-height: 50px;
 }
 
-.mobile .logo{
+.mobile .logo {
   letter-spacing: -3px;
   font-size: 60px;
   line-height: 0px;
   z-index: 20;
   position: absolute;
   top: 45px;
-
 }
 
-.small-logo{
-  font-family: 'Serpentine-MediumOblique';
+.small-logo {
+  font-family: "Serpentine-MediumOblique";
   font-size: 40px;
 }
 
-.tagline{
-  font-family: 'DINPro-Regular';
+.tagline {
+  font-family: "DINPro-Regular";
   font-size: 12px;
   line-height: 17px;
 }
 
-.title, .menu-item{
-  font-family: 'AcuminPro-ExtraLight';
+.title,
+.menu-item {
+  font-family: "AcuminPro-ExtraLight";
   font-size: 12px;
   line-height: initial;
 }
 
 /* header */
-header{
-  font-family: 'Serpentine-MediumOblique';
+header {
+  font-family: "Serpentine-MediumOblique";
   font-size: 18px;
   line-height: 23px;
 }
 
 /* subheader */
-.subheader{
-  font-family: 'AcuminPro-Regular';
+.subheader {
+  font-family: "AcuminPro-Regular";
   font-size: 18px;
   line-height: 23px;
 }
 
-body{
-  font-family: 'AcuminPro-Regular';
+body {
+  font-family: "AcuminPro-Regular";
   font-size: 18px;
   line-height: 23px;
 }
 
-@media (min-width: 320px) and (max-width: 767px){
-  body{
-    font-family: 'AcuminPro-Regular';
+@media (min-width: 320px) and (max-width: 767px) {
+  body {
+    font-family: "AcuminPro-Regular";
     font-size: 15px;
     line-height: 20px;
   }
-
 }
 
-p{
-    font-family: 'AcuminPro-Regular';
-    font-size: 15px;
-    line-height: 20px;
+p {
+  font-family: "AcuminPro-Regular";
+  font-size: 15px;
+  line-height: 20px;
 }
 
 .address,
-p.block{
-  font-family: 'AcuminPro-Regular';
+p.block {
+  font-family: "AcuminPro-Regular";
   font-size: 12px;
   line-height: 17px;
 }
-.main-text p{
-    font-family: 'AcuminPro-Regular';
-    font-size: 18px;
-    line-height: 24px;
-    /* letter-spacing: .5px; */
-
+.main-text p {
+  font-family: "AcuminPro-Regular";
+  font-size: 18px;
+  line-height: 24px;
+  /* letter-spacing: .5px; */
 }
-caption, footer, .error-message{
-  font-family: 'AcuminPro-Regular';
+caption,
+footer,
+.error-message {
+  font-family: "AcuminPro-Regular";
   font-size: 12px;
 }
 
-form{
-  font-family: 'AcuminPro-ExtraLight';
+form {
+  font-family: "AcuminPro-ExtraLight";
   font-size: 12px;
   line-height: 20px;
 }
 
 .breaking-news a,
-.preview-text p{
+.preview-text p {
   font-size: 15px;
   line-height: 20px;
   /* letter-spacing: 0.4px; */
   color: #4a4a4a;
 }
 
-.preview-text p{
-  font-family: 'AcuminPro-ExtraLight';
+.preview-text p {
+  font-family: "AcuminPro-ExtraLight";
 }
-.breaking-news a{
-  font-family: 'AcuminPro-ExtraLight';
+.breaking-news a {
+  font-family: "AcuminPro-ExtraLight";
   color: #00f;
   text-decoration: underline;
 }
 
-.breaking-news{
+.breaking-news {
   color: #00f;
 }
 
 .listView-text .author,
 .preview-text .author,
-.breaking-news .title{
-  font-family: 'AcuminPro-Regular';
+.breaking-news .title {
+  font-family: "AcuminPro-Regular";
   font-size: 40px;
   line-height: 40px;
   /* letter-spacing: 0.1px; */
@@ -191,40 +209,51 @@ form{
 }
 
 .listView-text .title,
-.preview-text .title{
-  font-family: 'AcuminPro-Bold';
+.preview-text .title {
+  font-family: "AcuminPro-Bold";
   font-size: 40px;
   /* letter-spacing: 0.1px; */
   margin: 0;
   white-space: nowrap;
 }
 
-.clickbait{
-  font-family: 'AcuminPro-Regular';
+.clickbait {
+  font-family: "AcuminPro-Regular";
   font-size: 15px;
   line-height: 25px;
 }
 
-.tilt-title{
-  transform: rotate(-12deg);
+.tilt-title,
+.credit {
   font-weight: bold;
   letter-spacing: 0.6px;
-  font-family: 'AcuminPro-Regular';
+  font-family: "AcuminPro-Regular";
   font-size: 40px;
   line-height: 40px;
   font-weight: 300;
   text-shadow: -2px 2px 4px #00000080;
   color: #fff;
   position: absolute;
-  top: -1em;
-  left: -3em;
+
   z-index: -1;
 }
+.tilt-title {
+  transform: rotate(-12deg);
 
+  top: -1em;
+  left: -3em;
+}
+
+.credit {
+  bottom: -2rem;
+  right: 0;
+  font-size: 21px;
+  padding-bottom: 3rem;
+}
 
 .modal-text p,
-#about-page .main-text{
-  font-family: 'AcuminPro-Regular';
+#about-page .main-text {
+  font-family: "AcuminPro-Regular";
   font-size: 20px;
   line-height: 24px;
   /* letter-spacing: 0.1px; */
@@ -233,16 +262,16 @@ form{
 }
 span.destination-tag,
 span.preview-tag,
-span.tba-tag{
-  font-family: 'AcuminPro-BoldItalic';
+span.tba-tag {
+  font-family: "AcuminPro-BoldItalic";
   font-size: 40px;
   line-height: 40px;
   text-shadow: 0 2px 4px #00000080;
   letter-spacing: 0.6px;
 }
 
-#projectPage .metatag{
-  font-family: 'AcuminPro-Bold';
+#projectPage .metatag {
+  font-family: "AcuminPro-Bold";
   /* todo: update fonts */
   font-size: 12px;
   font-weight: bold;
@@ -252,24 +281,24 @@ span.tba-tag{
   color: #4a4a4a;
 }
 
-#projectPage .title{
-  font-family: 'AcuminPro-Bold';
+#projectPage .title {
+  font-family: "AcuminPro-Bold";
   font-size: 40px;
   line-height: 40px;
   letter-spacing: 0.3px;
   color: #4a4a4a;
 }
-#projectPage .author{
-  font-family: 'AcuminPro-ExtraLight';
+#projectPage .author {
+  font-family: "AcuminPro-ExtraLight";
   font-size: 40px;
   line-height: 40px;
   letter-spacing: 0.3px;
   color: #4a4a4a;
 }
 
-#projectPage p{
-  font-family: 'AcuminPro-ExtraLight';
+#projectPage p {
+  font-family: "AcuminPro-ExtraLight";
   font-size: 18px;
   line-height: 25px;
-  letter-spacing: .1px;
+  letter-spacing: 0.1px;
 }
